--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cv-convert = "0.24.1"
 ndarray = "0.15.6"
-opencv = "0.85.1"
-ort = "1.16.2"
-tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
+opencv = "0.86.0"
+ort = { version = "1.16.2", features = ["download-binaries"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
